Updated README files

--- a/web_google_maps/static/description/index.html
+++ b/web_google_maps/static/description/index.html
@@ -8,14 +8,14 @@
         <div class="oe_span12">
             <p>This module brings four new features:</p>
             <ul>
-                <li>New view <em>google_map</em> allows you to pinpoint location on google maps.</li>
+                <li>New view <em>google_map</em> allows you to pinpoint location on Google Maps.</li>
                 <li>
                     New widget <em>gplaces_address_autocomplete</em>, enabled <a target="_blank" href="https://developers.google.com/maps/documentation/javascript/examples/places-autocomplete-addressform">Google places autocomplete address form</a> into partner form view,<br/>
-                    provide autocomplete feature when you typing an address of partner (or any field using this widget)
+                    provide autocomplete feature when you typing an address of partner (or any field using this widget).
                 </li>
                 <li>
                     New widget <em>gplaces_autocomplete</em>, enabled <a target="_blank" href="https://developers.google.com/maps/documentation/javascript/examples/places-autocomplete">Google places autocomplete</a> into partner form view,<br/>
-                    provide autocomplete feature when typing partner name (or any field using this widget)
+                    provide autocomplete feature when typing partner name (or any field using this widget).
                 </li>
                 <li>Map Localization</li>
             </ul>
@@ -52,9 +52,9 @@
         <h4 class="oe_slogan">List of Google APIs & Services required </h4>
         <div class="oe_span12 oe_mb32">
             <ol>
-                <li>Geocoding API</li>
-                <li>Maps JavaScript API</li>
-                <li>Places API</li>
+                <li><a href="https://developers.google.com/maps/documentation/geocoding/overview" target="_blank">Geocoding API</a>.</li>
+                <li><a href="https://developers.google.com/maps/documentation/javascript/overview" target="_blank">Maps JavaScript API</a>.</li>
+                <li><a href="https://developers.google.com/maps/documentation/places/web-service/overview" target="_blank">Places API</a>.</li>
             </ol>
         </div>
     </div>
