--- a/google_marker_icon_picker/static/description/index.html
+++ b/google_marker_icon_picker/static/description/index.html
@@ -2,10 +2,10 @@
     <div class="oe_row oe_spaced">
         <h4 class="oe_slogan">New Widget `google_marker_picker` Google Marker Picker</h4>
         <div class="oe_span12">
-            <img class="oe_picture oe_screenshot" src="widget_marker_picker.png"/>
+            <img class="oe_picture oe_screenshot" src="widget_marker_picker.png" alt="Google Marker Picker"/>
         </div>
         <div class="oe_span12 oe_mb32">
-            <p>New widget `google_marker_picker` allows user to set marker's color from any field</p>
+            <p>New widget `google_marker_picker` (<a href="https://icons8.com/icon/59830/marker">Google Marker Picker</a>) allows user to set marker's color from any field</p>
             <p>To apply the selected marker on map, you can tell the map view to load the marker by adding attribute color='[field_name]'</p>
             <br/>
             <p><a href="https://icons8.com/icon/59830/marker">Marker icon by Icons8</a></p>
