Added and Updated README files

--- a/partner_area_google_maps_drawing/static/description/index.html
+++ b/partner_area_google_maps_drawing/static/description/index.html
@@ -1,21 +1,13 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">Google Maps Drawing</h2>
-        <h4 class="oe_slogan">Allows you to draw a shape on map</h4>
+        <h2 class="oe_slogan" style="color:#875A7B;">Partner Area Google Maps Drawing</h2>
+        <h4 class="oe_slogan">A Google Maps Drawing implementation for define the Partner Area for Sales app</h4>
+        <p>This module contains a implementation of how to use the widget and also, a simple use case that used this feature</p>
         <div class="oe_span12">
-            <img class="oe_picture oe_screenshot" src="drawing_shapes.png"/>
+            <img class="oe_picture oe_screenshot" src="drawing_one2many.png"/>
             <div class="text-center">
                 <a href="https://youtu.be/DDUFT6XP8AU" class="btn btn-primary" target="_blank">Demo Video</a>
             </div>
-        </div>
-        <div class="oe_span12">
-            <p>New Widget <em>map_drawing_shape</em></p>
-            <p>Enables you to draw three kind of shapes</p>
-            <ul>
-                <li><a href="https://developers.google.com/maps/documentation/javascript/examples/rectangle-simple" target="_blank">Rectangle</a>.</li>
-                <li><a href="https://developers.google.com/maps/documentation/javascript/examples/polygon-simple" target="_blank">Polygon</a>.</li>
-                <li><a href="https://developers.google.com/maps/documentation/javascript/examples/circle-simple" target="_blank">Circle</a>.</li>
-            </ul>
         </div>
     </div>
 </section>
